# web/openapi.json
@@ -174,6 +174,30 @@
         }
       }
     },
+    "/subjects/{subject_id}/edges": {
+      "get": {
+        "summary": "Get Subject Edges",
+        "operationId": "get_subject_edges_subjects__subject_id__edges_get",
+        "parameters": [
+          {
+            "name": "subject_id",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "integer", "title": "Subject Id" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": { "application/json": { "schema": { "$ref": "#/components/schemas/Subgraph" } } }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": { "application/json": { "schema": { "$ref": "#/components/schemas/HTTPValidationError" } } }
+          }
+        }
+      }
+    },
     "/characters/{character_id}": {
       "get": {
         "summary": "Get Character",
@@ -284,6 +308,105 @@
   },
   "components": {
     "schemas": {
+      "AnimeStuff": {
+        "type": "integer",
+        "enum": [
+          1,
+          74,
+          2,
+          72,
+          3,
+          4,
+          89,
+          5,
+          91,
+          6,
+          7,
+          8,
+          9,
+          10,
+          11,
+          71,
+          13,
+          16,
+          19,
+          14,
+          15,
+          90,
+          70,
+          77,
+          17,
+          69,
+          86,
+          18,
+          20,
+          21,
+          92,
+          22,
+          67,
+          73,
+          82,
+          65,
+          85,
+          55,
+          24,
+          25,
+          26,
+          27,
+          75,
+          37,
+          28,
+          29,
+          30,
+          31,
+          32,
+          33,
+          34,
+          35,
+          36,
+          38,
+          39,
+          40,
+          41,
+          42,
+          63,
+          43,
+          84,
+          44,
+          45,
+          46,
+          88,
+          47,
+          48,
+          49,
+          50,
+          51,
+          58,
+          59,
+          54,
+          52,
+          53,
+          23,
+          87,
+          80,
+          56,
+          83,
+          57,
+          60,
+          61,
+          62,
+          64,
+          76,
+          66,
+          81
+        ],
+        "title": "AnimeStuff"
+      },
+      "BookStaff": {
+        "type": "integer",
+        "enum": [2007, 2001, 2002, 2003, 2010, 2004, 2005, 2006, 2008, 2009, 2011, 2012, 2013],
+        "title": "BookStaff"
+      },
       "Character": {
         "properties": {
           "id": { "type": "integer", "title": "Id" },
@@ -395,12 +518,80 @@
         "title": "Favorite",
         "description": "Favorite statistics."
       },
+      "GameStaff": {
+        "type": "integer",
+        "enum": [
+          1001,
+          1002,
+          1003,
+          1015,
+          1016,
+          1032,
+          1028,
+          1026,
+          1004,
+          1027,
+          1031,
+          1013,
+          1008,
+          1029,
+          1005,
+          1023,
+          1024,
+          1025,
+          1030,
+          1006,
+          1021,
+          1014,
+          1017,
+          1020,
+          1018,
+          1019,
+          1007,
+          1009,
+          1010,
+          1011,
+          1012,
+          1022
+        ],
+        "title": "GameStaff"
+      },
+      "GraphEdge": {
+        "properties": {
+          "to_subject": { "anyOf": [{ "$ref": "#/components/schemas/Subject" }, { "type": "null" }] },
+          "to_character": { "anyOf": [{ "$ref": "#/components/schemas/Character" }, { "type": "null" }] },
+          "to_person": { "anyOf": [{ "$ref": "#/components/schemas/Person" }, { "type": "null" }] },
+          "s2s_relation_type": {
+            "anyOf": [{ "$ref": "#/components/schemas/SubjectRelationType" }, { "type": "null" }]
+          },
+          "p2c_summary": { "anyOf": [{ "type": "string" }, { "type": "null" }], "title": "P2C Summary" },
+          "s2p_position": {
+            "anyOf": [
+              { "$ref": "#/components/schemas/AnimeStuff" },
+              { "$ref": "#/components/schemas/BookStaff" },
+              { "$ref": "#/components/schemas/GameStaff" },
+              { "$ref": "#/components/schemas/MusicStaff" },
+              { "$ref": "#/components/schemas/RealStaff" },
+              { "type": "null" }
+            ],
+            "title": "S2P Position"
+          },
+          "s2c_type": { "anyOf": [{ "$ref": "#/components/schemas/SubjectCharacterType" }, { "type": "null" }] }
+        },
+        "type": "object",
+        "title": "GraphEdge"
+      },
       "HTTPValidationError": {
         "properties": {
           "detail": { "items": { "$ref": "#/components/schemas/ValidationError" }, "type": "array", "title": "Detail" }
         },
         "type": "object",
         "title": "HTTPValidationError"
+      },
+      "MusicStaff": {
+        "type": "integer",
+        "enum": [3001, 3002, 3004, 3003, 3006, 3008, 3014, 3015, 3007, 3013, 3012, 3009, 3005, 3010, 3011],
+        "title": "MusicStaff"
       },
       "Person": {
         "properties": {
@@ -451,6 +642,31 @@
         "required": ["query"],
         "title": "PersonsIndexQuery"
       },
+      "RealStaff": {
+        "type": "integer",
+        "enum": [
+          4001,
+          4002,
+          4013,
+          4003,
+          4004,
+          4005,
+          4006,
+          4007,
+          4008,
+          4009,
+          4010,
+          4011,
+          4012,
+          4014,
+          4015,
+          4016,
+          4017,
+          4018,
+          4019
+        ],
+        "title": "RealStaff"
+      },
       "ScoreDetails": {
         "properties": {
           "1": { "type": "integer", "title": "1", "default": 0 },
@@ -467,6 +683,18 @@
         "type": "object",
         "title": "ScoreDetails",
         "description": "Score distribution details."
+      },
+      "Subgraph": {
+        "properties": {
+          "from_subject": { "anyOf": [{ "$ref": "#/components/schemas/Subject" }, { "type": "null" }] },
+          "from_character": { "anyOf": [{ "$ref": "#/components/schemas/Character" }, { "type": "null" }] },
+          "from_person": { "anyOf": [{ "$ref": "#/components/schemas/Person" }, { "type": "null" }] },
+          "edges": { "items": { "$ref": "#/components/schemas/GraphEdge" }, "type": "array", "title": "Edges" }
+        },
+        "type": "object",
+        "required": ["edges"],
+        "title": "Subgraph",
+        "description": "A subgraph of vertices/edges around to a \"from\" vertex"
       },
       "Subject": {
         "properties": {
@@ -510,6 +738,70 @@
         ],
         "title": "Subject",
         "description": "Subject model (anime, book, game, etc.)."
+      },
+      "SubjectCharacterType": {
+        "type": "integer",
+        "enum": [1, 2, 3, 4, 5],
+        "title": "SubjectCharacterType",
+        "description": "Character types in subject-character relationships."
+      },
+      "SubjectRelationType": {
+        "type": "integer",
+        "enum": [
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7,
+          8,
+          9,
+          10,
+          11,
+          12,
+          14,
+          99,
+          1002,
+          1003,
+          1004,
+          1005,
+          1006,
+          1007,
+          1008,
+          1010,
+          1011,
+          1012,
+          1013,
+          1014,
+          1015,
+          1099,
+          3001,
+          3002,
+          3003,
+          3004,
+          3005,
+          3006,
+          3007,
+          3099,
+          4002,
+          4003,
+          4006,
+          4007,
+          4008,
+          4009,
+          4010,
+          4012,
+          4014,
+          4015,
+          4016,
+          4017,
+          4018,
+          4019,
+          4099
+        ],
+        "title": "SubjectRelationType",
+        "description": "Relation types between subjects."
       },
       "SubjectSearchResult": {
         "properties": {
